--- a/regPage.html
+++ b/regPage.html
@@ -3,135 +3,106 @@
       <head>
         <title>Registration Page</title>
         <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    		<meta name="viewport" content="width=device-width, initial-scale=1">
+    		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="regPage.js"></script>
       </head>
-      <body style="background-color:#1F1F1E">
+      <body style="background-color:#000000">
         <div class="container-fluid">
-          <h1 style="text-align: center;color:#C6C654;font-family:georgia">Account Creation</h1>
+          <br>
+          <h1 style="text-align: center;color:#C7BA7C;font-family:georgia">Account Creation</h1>
           <br>
           <br>
           <div class="card mx-auto" style="width: 30rem;">
             <div class="card-body">
-              <form class="needs-validation" novalidate>
+              <form onsubmit="return(formDone());" name="regForm" id="regForm" >
                 <div class="row">
                   <div class="col">
                     <div class="form-group">
                       <label for="validationFName" class="h6">First Name</label>
-                      <input type="fName" class="form-control" id="John" placeholder="First Name" required>
-                      <div class="invalid-feedback">
-                        Please enter a name.
-                      </div>
+                      <input class="form-control" id="fName" placeholder="First Name">
+                      <span class="error"><small id="fNameError" style="color:red"></small></span>
                     </div>
                   </div>
                   <div class="col">
                     <div class="form-group">
                       <label for="validationLName" class="h6">Last Name</label>
-                      <input type="lName" class="form-control" id="Doe" placeholder="Last Name" required>
-                      <div class="invalid-feedback">
-                        Please enter a name.
-                      </div>
+                      <input class="form-control" id="lName" placeholder="Last Name">
+                      <span><small id="lNameError" style="color:red"></small></span>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="validationSchool" class="h6">School</label>
-                  <select class="form-control" id="Page Type" required>
+                  <select class="form-control" id="schoolSelect">
                     <option value="">Select a School</option>
                     <option value="1">CU - Boulder</option>
                     <option value="2">UT - Arlington</option>
                   </select>
-                  <div class="invalid-feedback">
-                    Please Select a School.
-                  </div>
+                  <span class="error"><small id="schoolError" style="color:red"></small></span>
                 </div>
                 <p class="h6">Select Role</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="student" value="student">
+                  <input class="form-check-input" type="checkbox" id="studentStatus" value="None">
                   <label class="form-check-label" for="student">Student</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" data-toggle="collapse" data-target="#tutorInfo" id="tutor" value="tutor">
-                  <label class="form-check-label" for="tutor">Tutor</label>
+                  <input class="form-check-input" onclick ="tutorInfo('tutorCard', 1);" type="checkbox" name = "tutorStatus" id="tutorStatus">
+                  <label class="form-check-label" for="tutorCheck">Tutor</label>
                 </div>
-                <div class="collapse" id="tutorInfo">
-                  <div class="card card-body" id="tutorInfo">
-                    <div class="form-group">
-                      <label for="validationSchool" class="h6">What Year Are You?</label>
-                      <select class="form-control" id="Page Type" required>
-                        <option value="">Select a Year</option>
-                        <option value="1">Freshman</option>
-                        <option value="2">Sophomore</option>
-                        <option value="3">Junior</option>
-                        <option value="4">Senior</option>
-                      </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="validationSchool" class="h6">What Subject?</label>
-                      <select class="form-control" id="Page Type" required>
-                        <option value="">Select a Subject</option>
-                        <option value="1">Math</option>
-                        <option value="2">Physics</option>
-                        <option value="3">Computer Science</option>
-                        <option value="4">English</option>
-                      </select>
-                    </div>
+                <span class="error"><small id="typeStatus" style="color:red"></small></span>
+                <div class="card card-body" style="display:none;" id="tutorCard">
+                  <div class="form-group" id="tutorForm">
+                    <label for="validationSchool" class="h6">What Year Are You?</label>
+                    <select class="form-control" id="yearStatus">
+                      <option value="">Select a Year</option>
+                      <option value="1">Freshman</option>
+                      <option value="2">Sophomore</option>
+                      <option value="3">Junior</option>
+                      <option value="4">Senior</option>
+                    </select>
+                    <span class="error"><small id="yearError" style="color:red"></small></span>
+                  </div>
+                  <div class="form-group">
+                    <label for="validationSchool" class="h6">What Subject?</label>
+                    <select class="form-control" id="subjectStatus">
+                      <option value="">Select a Subject</option>
+                      <option value="1">Math</option>
+                      <option value="2">Physics</option>
+                      <option value="3">Computer Science</option>
+                      <option value="4">English</option>
+                    </select>
+                    <span class="error"><small id="subjectError" style="color:red"></small></span>
                   </div>
                 </div>
                 <br>
                 <br>
                 <div class="form-group">
                   <label for="emailAddress" class="h6">Student E-mail</label>
-                  <input type="email" class="form-control" id="email" placeholder="example@school.edu" required>
+                  <input type="email" class="form-control" id="email" placeholder="example@school.edu">
+                  <span class="error"><small id="emailError" style="color:red"></small></span>
                 </div>
-                <div class="invalid-feedback">
-                    Please Enter a Valid E-mail.
-                  </div>
                 <div class="form-group">
                   <label for="pWord" class="h6">Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="Password" required>
+                  <input type="password" class="form-control" id="password" placeholder="Password">
                   <small id="passwordHelpBlock" class="form-text text-muted">
                     Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                   </small>
+                  <span class="error"><small id="passError" style="color:red"></small></span>
                 </div>
-                <div class="invalid-feedback">
-                    Please Enter a Valid Password.
-                  </div>
                 <div class="form-group">
                   <label for="pWordC" class="h6">Confirm Password</label>
-                  <input type="password" class="form-control" id="password" placeholder="Confirm Password" required>
+                  <input type="password" class="form-control" id="cPassword" placeholder="Confirm Password">
+                  <span class="error"><small id="cPassError" style="color:red"></small></span>
                 </div>
-                <div class="invalid-feedback">
-                    Please Verify Your E-mail.
-                  </div>
                 <br>
                 <div class="mt-3">
                   <button type="submit" class="btn btn-dark btn-block">Submit</button>
                 </div>
               </form>
-              <script>
-                // from https://getbootstrap.com/docs/4.1/components/forms/
-                (function() {
-                  'use strict';
-                  window.addEventListener('load', function() {
-                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                    var forms = document.getElementsByClassName('needs-validation');
-                     // Loop over them and prevent submission
-                    var validation = Array.prototype.filter.call(forms, function(form) {
-                      form.addEventListener('submit', function(event) {
-                        if (form.checkValidity() === false) {
-                          event.preventDefault();
-                          event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                      }, false);
-                    });
-                  }, false);
-                })();
-                </script>
             </div>
           </div>
         </div>
