--- a/regPage.html
+++ b/regPage.html
@@ -9,8 +9,30 @@
     		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="regPage.js"></script>
+        <style>
+          .topnav{
+            background-color: #C7BA7C;
+            overflow:hidden;
+          }
+          .topnav a{
+            float:left;
+            color:#000000;
+            text-align: center;
+            padding: 10px 14px;
+            text-decoration: none;
+            font-size: 17px;
+          }
+          .topnav a:hover {
+            background-color: #CFbf5C;
+            color: black;
+          }
+      </style>
       </head>
       <body style="background-color:#000000">
+        <div class="topnav">
+          <a class="active"href="#home">Home</a>
+          <a class="active"href="#about">About</a>
+        </div>
         <div class="container-fluid">
           <br>
           <h1 style="text-align: center;color:#C7BA7C;font-family:georgia">Account Creation</h1>
