Test for graphs

--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,4 +1,5 @@
-    <html lang="en">
+   
+         <html lang="en">
       <head>
         <title>Login Page</title>
         <meta charset="utf-8">
@@ -50,7 +51,7 @@
                   <div class="col">
                     <div class="form-group">
                       <label for="validationLName" class="h6">Password</label>
-                      <input class="form-control" id="lName" placeholder="password">
+                      <input type ="password" class="form-control" id="lName" placeholder="password">
                       <span class="error"><small id="passError" style="color:red"></small></span>
                     </div>
                   </div>
