--- a/LoginPage.html
+++ b/LoginPage.html
@@ -30,7 +30,7 @@
       </head>
       <body style="background-color:#000000">
         <div class="topnav">
-          <a class="active"href="#home">Home</a>
+          <a class="active"href="LoginPage.html">Home</a>
           <a class="active"href="#about">About</a>
         </div>
         <div class="container-fluid">
@@ -81,7 +81,7 @@
                 <div class="mt-2">
                  <center>
                   <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
-                  <a class="btn btn-lg btn-dark" href="register.html">Register</a>
+                  <a class="btn btn-lg btn-dark" href="regPage.html">Register</a>
                  </center>
                 </div>
               </form>
