--- a/Profile.html
+++ b/Profile.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -205,11 +206,14 @@
   <form action="/action_page.php" class="form-container">
     <h1>Chat</h1>
 
-    <label for="msg"><b>Message</b></label>
-    <textarea placeholder="Type message.." name="msg" required></textarea>
+    <label id="messages" for="msg"><b>Message</b></label>
+    <textarea id="textbox" placeholder="Type message.." name="msg" required></textarea>
 
-    <button type="submit" class="btn">Send</button>
+    <button id="button" type="submit" class="btn">Send</button>
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+    <script src="server.js"></script>
+    <!--<script src="Message.js"></script>-->
+
   </form>
 </div>
 
